--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -35,10 +35,11 @@ jobs:
           # pr_assignees: bodrovis
           # async_mode: true
           skip_include_tags: true
-          additional_params: >
-            {
-              "include_tags": ["release-2025-08-19"]
-            }
+          additional_params: ""
+          # additional_params: >
+          #   {
+          #     "include_tags": ["release-2025-08-19"]
+          #   }
           # post_process_command: "python scripts/replace_test.py"
           # post_process_strict: true
           # additional_params: >
