--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
@@ -31,6 +31,7 @@ jobs:
           translations_path: messages
           flat_naming: true
           file_format: json
+          file_ext: json
           # pr_draft: true
           # pr_assignees: bodrovis
           # async_mode: true
