--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -80,10 +80,14 @@ jobs:
  
       - name: Debug Created Branch
         run: |
-          echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
-          echo "PR created: ${{ steps.lokalise-pull.outputs.pr_created }}"
-          echo "PR id: ${{ steps.lokalise-pull.outputs.pr_id }}"
-          echo "PR number: ${{ steps.lokalise-pull.outputs.pr_number }}"
+          echo "Branch used:   ${{ steps.lokalise-pull.outputs.created_branch }}"
+          echo "PR exists:     ${{ steps.lokalise-pull.outputs.pr_exists }}"
+          echo "PR created:    ${{ steps.lokalise-pull.outputs.pr_created }}"
+          echo "PR updated:    ${{ steps.lokalise-pull.outputs.pr_updated }}"
+          echo "PR action:     ${{ steps.lokalise-pull.outputs.pr_action }}"
+          echo "PR number:     ${{ steps.lokalise-pull.outputs.pr_number }}"
+          echo "PR id:         ${{ steps.lokalise-pull.outputs.pr_id }}"
+          echo "PR url:        ${{ steps.lokalise-pull.outputs.pr_url }}"
       
       # - name: Trigger Automerge Workflow
       #   if: steps.lokalise-pull.outputs.created_branch != '' && steps.lokalise-pull.outputs.pr_created == 'true'
