--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -44,8 +44,8 @@ jobs:
           #   {
           #     "include_tags": ["release-2025-08-19"]
           #   }
-          # post_process_command: "python scripts/replace_test.py"
-          # post_process_strict: true
+          post_process_command: "python scripts/replace_test.py"
+          post_process_strict: true
           # additional_params: >
           #   {
           #     "indentation": "2sp",
