--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -32,7 +32,7 @@ jobs:
           # flat_naming: true
           rambo_mode: false
           skip_tagging: false
-          use_tag_tracking: true
+          # use_tag_tracking: true
           name_pattern: "en/**/custom_*.json"
           # upload_timeout: 1
           # name_pattern: "custom_file.json"
