--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -32,6 +32,7 @@ jobs:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: messages
+          override_branch_name: lokalise-sync
           flat_naming: true
           file_format: json
           file_ext: json
@@ -44,6 +45,7 @@ jobs:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: messages
+          override_branch_name: lokalise-sync
           flat_naming: true
           file_format: json
           file_ext: json
