--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -66,17 +66,17 @@ jobs:
         uses: lokalise/lokalise-pull-action@add_signed_commits
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
-          project_id: 5868381966b39e5053ff15.63486389
+          project_id: wrong # 5868381966b39e5053ff15.63486389
           translations_path: messages
           # override_branch_name: lokalise-sync
           flat_naming: true
           file_format: json
           file_ext: json
-          skip_include_tags: true
-          git_sign_commits: true
-          git_user_name: "bodrovis"
-          git_user_email: "golosizpru@gmail.com"
-          custom_github_token: "fake"
+          # skip_include_tags: true
+          # git_sign_commits: true
+          # git_user_name: "bodrovis"
+          # git_user_email: "golosizpru@gmail.com"
+          # custom_github_token: "fake"
           # force_push: true
  
       # - name: Pull from Lokalise again
