--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -65,13 +65,13 @@ jobs:
         id: lokalise-pull
         uses: lokalise/lokalise-pull-action@main
         with:
-          api_token: fake # ${{ secrets.LOKALISE_API_TOKEN }}
+          api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: messages
           # override_branch_name: lokalise-sync
           flat_naming: true
-          file_format: json
-          file_ext: json
+          file_format: strings
+          # file_ext: json
           # skip_include_tags: true
           # git_sign_commits: true
           # git_user_name: "bodrovis"
