--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -20,24 +20,34 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Lokalise CLI v2
+        uses: lokalise/install-lokalise-cli-v2@master
+        with:
+          force-install: true         
+          target-version: 3.1.3 
+
+      - name: Check CLI
+        run: |
+          lokalise2 --version
+
       # - name: Check Python
       #   run: |
       #     which python
       #     python --version
           
-      - name: Pull from Lokalise
-        id: lokalise-pull
-        uses: lokalise/lokalise-pull-action@main
-        with:
-          api_token: ${{ secrets.LOKALISE_API_TOKEN }}
-          project_id: 5868381966b39e5053ff15.63486389
-          translations_path: messages
-          # override_branch_name: lokalise-sync
-          flat_naming: true
-          file_format: json
-          file_ext: json
-          skip_include_tags: true
-          # force_push: true
+      # - name: Pull from Lokalise
+      #   id: lokalise-pull
+      #   uses: lokalise/lokalise-pull-action@main
+      #   with:
+      #     api_token: ${{ secrets.LOKALISE_API_TOKEN }}
+      #     project_id: 5868381966b39e5053ff15.63486389
+      #     translations_path: messages
+      #     # override_branch_name: lokalise-sync
+      #     flat_naming: true
+      #     file_format: json
+      #     file_ext: json
+      #     skip_include_tags: true
+      #     # force_push: true
  
       # - name: Pull from Lokalise again
       #   id: lokalise-pull2
@@ -56,16 +66,16 @@ jobs:
       #     skip_include_tags: true
       #     # force_push: true
 
-      - name: Debug Created Branch
-        run: |
-          echo "Branch used:   ${{ steps.lokalise-pull.outputs.created_branch }}"
-          echo "PR exists:     ${{ steps.lokalise-pull.outputs.pr_exists }}"
-          echo "PR created:    ${{ steps.lokalise-pull.outputs.pr_created }}"
-          echo "PR updated:    ${{ steps.lokalise-pull.outputs.pr_updated }}"
-          echo "PR action:     ${{ steps.lokalise-pull.outputs.pr_action }}"
-          echo "PR number:     ${{ steps.lokalise-pull.outputs.pr_number }}"
-          echo "PR id:         ${{ steps.lokalise-pull.outputs.pr_id }}"
-          echo "PR url:        ${{ steps.lokalise-pull.outputs.pr_url }}"
+      # - name: Debug Created Branch
+      #   run: |
+      #     echo "Branch used:   ${{ steps.lokalise-pull.outputs.created_branch }}"
+      #     echo "PR exists:     ${{ steps.lokalise-pull.outputs.pr_exists }}"
+      #     echo "PR created:    ${{ steps.lokalise-pull.outputs.pr_created }}"
+      #     echo "PR updated:    ${{ steps.lokalise-pull.outputs.pr_updated }}"
+      #     echo "PR action:     ${{ steps.lokalise-pull.outputs.pr_action }}"
+      #     echo "PR number:     ${{ steps.lokalise-pull.outputs.pr_number }}"
+      #     echo "PR id:         ${{ steps.lokalise-pull.outputs.pr_id }}"
+      #     echo "PR url:        ${{ steps.lokalise-pull.outputs.pr_url }}"
       
       # - name: Trigger Automerge Workflow
       #   if: steps.lokalise-pull.outputs.created_branch != '' && steps.lokalise-pull.outputs.pr_created == 'true'
