--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -29,10 +29,10 @@ jobs:
           translations_path: |
             messages
             locales
-          # override_branch_name: lokalise-sync
+          override_branch_name: lokalise-sync
           flat_naming: true
           file_format: json
-          # force_push: true
+          force_push: true
           # file_ext: json
           skip_include_tags: true
           additional_params: |
